<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <ImageView
        android:id="@+id/iv_new_report"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/dark_grey" />

    <EditText
        android:id="@+id/et_new_report_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_report_title"
        android:layout_marginTop="25dp"
        android:textSize="18sp"
        android:inputType="text"/>

    <EditText
        android:id="@+id/et_new_report_desc"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="14sp"
        android:hint="@string/new_report_description"/>

    <Button
        android:id="@+id/bn_new_report_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_report_send"
        android:layout_gravity="center"
        android:textSize="20sp"
        style="@style/Widget.MaterialComponents.Button"/>

</LinearLayout>